[project]
name = "corpora"
version = "0.1.0"
description = "Extract vocabulary from documents and classify into structured JSON"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "corpora contributors"}
]
keywords = ["document", "parsing", "vocabulary", "extraction", "pdf", "epub"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing",
]

dependencies = [
    "pymupdf>=1.26.0",
    "typer[all]>=0.9.0",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
ocr = [
    "pytesseract>=0.3.10",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
corpora = "corpora.cli.main:app"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]
